wsp: Rename max_finger_area sysctl to max_finger_diameter
The value of this sysctl is not an area, but a maximum diameter.

Signed-off-by: Joshua Rogers <Joshua@Joshua.Hu>

--- a/share/man/man4/wsp.4
+++ b/share/man/man4/wsp.4
@@ -107,8 +107,8 @@ Enables movement on the trackpad follow a partially-released left-click.
 Default is 1 (enabled).
 .El
 .Bl -tag -width indent
-.It Va hw.usb.wsp.max_finger_area
-Specifies the maximum area on the trackpad which is registered as a
+.It Va hw.usb.wsp.max_finger_diameter
+Specifies the maximum finger diameter on the trackpad that is registered as a
 finger (a lower value is used for palm detection). Default is 1900.
 .El
 .Bl -tag -width indent
