--- a/share/man/man4/ktls.4
+++ b/share/man/man4/ktls.4
@@ -29,7 +29,7 @@
 .\"
 .\" * Other names and brands may be claimed as the property of others.
 .\"
-.Dd May 26, 2021
+.Dd October 31, 2024
 .Dt KTLS 4
 .Os
 .Sh NAME
@@ -229,8 +229,10 @@ mode.
 OpenSSL 3.0 and later include support for
 .Nm .
 The
-.Fa security/openssl-devel
-port may also be built with support for
+.Fa security/openssl*
+and
+.Fa security/gnutls
+ports may also be built with support for
 .Nm
 by enabling the
 .Dv KTLS
